objects/Field_Marketing_Checklist__c.object
<CustomObject>
    <fields>
        <fullName>Campaign_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign Name</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Field Marketing Checklists</relationshipLabel>
        <relationshipName>Field_Marketing_Checklists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Campaign_Source__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign Source</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Field Marketing Checklists (Campaign Source)</relationshipLabel>
        <relationshipName>Field_Marketing_Checklists3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Capture_BANT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Capture BANT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Create_a_webform_for_lead_capture__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create a webform for lead capture</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Demos_Presented__c</fullName>
        <label>Demos Presented</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>End Date</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Field Marketing Checklists (End Date)</relationshipLabel>
        <relationshipName>Field_Marketing_Checklists2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>No_Sharing_leads_with_sales__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Sharing leads with sales</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Speaker_Names_and_Titles__c</fullName>
        <label>Speaker Names and Titles</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Start Date</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Field Marketing Checklists (Start Date)</relationshipLabel>
        <relationshipName>Field_Marketing_Checklists1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Synopsis_and_Objectives__c</fullName>
        <label>Synopsis and Objectives</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Work_with_sales__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Work with sales</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>lf_country__c</fullName>
        <defaultValue>false</defaultValue>
        <label>lf country</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>lf_email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>lf email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>lf_last_name__c</fullName>
        <defaultValue>false</defaultValue>
        <label>lf last name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>lf_state__c</fullName>
        <defaultValue>false</defaultValue>
        <label>lf state</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>lf_title__c</fullName>
        <defaultValue>false</defaultValue>
        <label>lf title</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>prepare_lead_upload_file__c</fullName>
        <defaultValue>false</defaultValue>
        <label>prepare lead upload file</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>review_lead_records__c</fullName>
        <defaultValue>false</defaultValue>
        <label>review lead records</label>
        <type>Checkbox</type>
    </fields>
    <label>Field Marketing Checklist</label>
    <nameField>
        <label>Field Marketing Checklist Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Field Marketing Checklists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>